--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
             <version>4.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
 
 
     </dependencies>
